--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.apache.commons:commons-text:1.2'
+    // https://mvnrepository.com/artifact/edu.stanford.nlp/stanford-corenlp
+    implementation group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '3.9.2'
+    implementation group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '3.9.2', classifier: 'models'
+    // https://mvnrepository.com/artifact/org.beykery/neuroph
+    implementation group: 'org.beykery', name: 'neuroph', version: '2.92'
+    // https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-stable
+    implementation group: 'nz.ac.waikato.cms.weka', name: 'weka-stable', version: '3.8.0'
+    implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+    // https://mvnrepository.com/artifact/edu.stanford.nlp/stanford-pos-tagger
+    compile group: 'edu.stanford.nlp', name: 'stanford-pos-tagger', version: '3.0.2'
+
 }
